# embsys-espi

./: .gitignore
coordinator/: Cargo.toml
coordinator/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
gateway/: Cargo.toml
gateway/src/: main.rs  tests.rs
node/: CMakeLists.txt  README.md
node/host_tests/: msg_test.c  ring_buff_test.c  test_cmd_parse.c  test_telemetry_buf.c
node/main/: CMakeLists.txt  app_main.c  cmd_parse.c  cmd_parse.h  idf_component.yml  msg.c  msg.h  rgb.c  rgb.h  ring_buf.c  ring_buf.h  telemetry_buf.c  telemetry_buf.h  ws.c  ws.h
